--- a/teaching/elmecha/ora2.html
+++ b/teaching/elmecha/ora2.html
@@ -119,6 +119,9 @@
 									
 									Kezdjük az első lépéssel:
 								</p>
+								<div style="text-align: center;">
+									<img src="figs/lesson2/csuszoek.png" alt="Kis ábra a csúszó ékről" width="45%">
+								</div>
 								<h4>
 									1.1.1. Mi a hatás?
 								</h4>
@@ -151,6 +154,9 @@
 										y_2 = (x_1+x_2) \tan{\varphi}
 									$$
 								</p>
+								<div style="text-align: center;">
+									<img src="figs/lesson2/csuszoek2.png" alt="Nagy ábra a csúszó ékről" width="45%">
+								</div>
 								<p style="text-align: justify;">
 									Ez kétrétről is hasznos lesz: egyrészt a potenciális energiába pont ezt a magasságmegváltozást kerestük:
 									$$
@@ -252,6 +258,9 @@
 									Vegyünk egy asztalt, és szögezzünk rá egy félkört.
 									Ezután rakjunk rá egy kis tömegpontot, ami súrlódásmentesen lecsúszhat: <i>mi lesz a mozgásegyenlet?</i>
 								</p>
+								<div style="text-align: center;">
+									<img src="figs/lesson2/felkorek.png" alt="Félkörről lecsúszó test" width="40%">
+								</div>
 								<p style="text-align: justify;">
 									Először írjuk fel a feladatot Descartes-i koordinátarendszerben. Kényszerek nélkül, a kinetikus tagban lehetne bármi:
 									$$
@@ -528,6 +537,9 @@
 									Vegyünk egy sima matematikai ingát, ami alapjáraton $l$ hosszúságú, és egy $m$ tömegű testet tart.
 									Cseréljük ki a madzagot egy $k$ rugóállandójú rugóra: \textit{mi lesz ekkor a mozgásegyenlet?}
 								</p>
+								<div style="text-align: center;">
+									<img src="figs/lesson2/ruginga.png" alt="Kis ábra a csúszó ékről" width="40%">
+								</div>
 								<h4>2.5.1. Descartes</h4>
 								<p style="text-align: justify;">
 									Bemelegítésként először írjuk fel a sima inga problémáját Lagrange-osan, Descartes-i koordinátákkal.
