--- a/teaching/elmecha/ora2.html
+++ b/teaching/elmecha/ora2.html
@@ -140,7 +140,7 @@
 										K = \frac{1}{2}M \dot{x_1}^2 + \frac{1}{2}M \dot{y_1}^2 + \frac{1}{2} m \dot{x_2}^2 + \frac{1}{2} m \dot{y_2}^2
 									$$
 									Ami általánosan szép és jó, viszont elviekben még semmi nem zárja ki, hogy a kis téglatestünk egyenesen átessen a háromszögön, a nagy háromszögünk pedig az asztalon.
-									Ehhez egy-egy \textbf{kényszert} kell kiróni: az $m$ test \textbf{kényszeresen} az ék felületén közlekedik lefelé, az $M$ test pedig egyáltalán nem mozoghat fel-le.
+									Ehhez egy-egy <b>kényszert</b> kell kiróni: az $m$ test <b>kényszeresen</b> az ék felületén közlekedik lefelé, az $M$ test pedig egyáltalán nem mozoghat fel-le.
 								</p>
 								<p style="text-align: justify;">
 									Ahhoz, hogy ez a kényszer teljesüljön, matekká kell fogalmazni amit szeretnénk kiróni.
@@ -155,7 +155,7 @@
 									$$
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson2/csuszoek2.png" alt="Nagy ábra a csúszó ékről" width="45%">
+									<img src="figs/lesson2/csuszoek2.png" alt="Nagy ábra a csúszó ékről" width="55%">
 								</div>
 								<p style="text-align: justify;">
 									Ez kétrétről is hasznos lesz: egyrészt a potenciális energiába pont ezt a magasságmegváltozást kerestük:
@@ -443,9 +443,11 @@
 									Energiamegmaradás
 								</h3>
 								<p style="text-align: justify;">
-									A gyakorlatban az egy dimenziós példák gyakran még tovább egyszerűsödnek. Mindeddig nem használtunk ki egy erős eszközt: az energiamegmaradást. Ugyanis ha a Lagrange-függvényünk nem függ \textit{expliciten} az időtől, akkor létezik egy mennyiség, ami megmarad: őt (általánosított) \textbf{energiának} hívjuk.
+									A gyakorlatban az egy dimenziós példák gyakran még tovább egyszerűsödnek.
+									Mindeddig nem használtunk ki egy erős eszközt: az energiamegmaradást.
+									Ugyanis ha a Lagrange-függvényünk nem függ <i>expliciten</i> az időtől, akkor létezik egy mennyiség, ami megmarad: őt (általánosított) <b>energiának</b> hívjuk.
 									$$
-									    \mathcal{L}\bigl(r(t), \dot{r}(t), <s>t</s>\bigr) \quad \longrightarrow \quad E = \dot{\vec{r}} \frac{\partial \mathcal{L}}{\partial \dot{\vec{r}}} - \mathcal{L} = \text{konst.}
+									    \mathcal{L}\bigl(r(t), \dot{r}(t)\bigr) \quad\quad \longrightarrow \quad\quad E = \dot{\vec{r}} \frac{\partial \mathcal{L}}{\partial \dot{\vec{r}}} - \mathcal{L} = \text{konst.}
 									$$
 									Ennek egy speciális esete a klasszikus mechanika, ugyanis ekkor
 									$$
@@ -465,7 +467,7 @@
 									$$
 									    \mathcal{L} = \frac{1}{2}m \dot{\varphi}^2  R^2 - mgR \cos{\varphi}
 									$$
-									És a belőle kapott \textit{lendületet}:
+									És a belőle kapott <i>lendületet</i>:
 									$$
 									\begin{aligned}
 									    \frac{\partial \mathcal{L}}{\partial \dot{\varphi}} = m R^2 \dot{\varphi}
@@ -491,7 +493,7 @@
 									$$
 								</p>
 								<p style="text-align: justify;">
-									Egy \textit{elsőrendű} diffegyenletet kaptunk.
+									Egy <i>elsőrendű</i> diffegyenletet kaptunk.
 									Most ezt oldjuk, meg, hogy gyakoroljuk a diffegyenletek megoldását is.
 									Először is a tömörség kedvéért legyen $\omega = \sqrt{g/R}$, és nézzük csak a pozitív megoldást.
 									$$
@@ -535,7 +537,7 @@
 								</h3>
 								<p style="text-align: justify;">
 									Vegyünk egy sima matematikai ingát, ami alapjáraton $l$ hosszúságú, és egy $m$ tömegű testet tart.
-									Cseréljük ki a madzagot egy $k$ rugóállandójú rugóra: \textit{mi lesz ekkor a mozgásegyenlet?}
+									Cseréljük ki a madzagot egy $k$ rugóállandójú rugóra: <i>mi lesz ekkor a mozgásegyenlet?</i>
 								</p>
 								<div style="text-align: center;">
 									<img src="figs/lesson2/ruginga.png" alt="Kis ábra a csúszó ékről" width="40%">
@@ -663,7 +665,7 @@
 									$$
 									    \mathcal{L} \quad \longrightarrow \quad \mathcal{L}^\prime =\mathcal{L}+\frac{\rd F}{\rd t}
 									$$
-									\textit{feltéve} hogy a függvény alakja $F(t, q)$, tehát csak a koordinátáktól és az időtől függhet, a sebességektől nem.
+									<i>feltéve</i> hogy a függvény alakja $F(t, q)$, tehát csak a koordinátáktól és az időtől függhet, a sebességektől nem.
 									Ezt gyorsan bebizonyítjuk, belátva hogy az Euler-Lagrange egyenlet ekkor is teljesül:
 									$$
 									\begin{aligned}
