--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -124,7 +124,7 @@
 										<li><a href="../teaching/elmecha/ora1.html">Óra (09.15.) - Variáció</a></li>
 										-->
 										<li><a href="elmecha/ora1.html">Óra (09.15.)</a></li>
-										<li>Óra (09.22.)</li>
+										<li><a href="elmecha/ora2.html">Óra (09.22.)</a></li>
 										<li>Óra (09.29.)</li>
 										<li>Óra (10.06.)</li>
 										<li>Óra (10.13.)</li>
