--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -113,18 +113,18 @@
 									</details>
 									<h3>Beadandók:</h3>
 									<ul>
-										<li>1. beadandó (10.19.)
+										<li>I. beadandó (10.19.)
 											<ul>
 												<li><a href="elmecha/Beadando_I_123.pdf">1.,2.,3. feladat</a></li>
 											</ul>
 										</li>
-										<li>1. szorgalmi (10.19.)
+										<li>I. szorgalmi (10.19.)
 											<ul>
 												<li><a href="elmecha/Szorgalmi_I_AB.pdf">A,B feladat</a></li>
 											</ul>
 										</li>
-										<li>2. beadandó</li>
-										<li>2. szorgalmi</li>
+										<li>II. beadandó</li>
+										<li>II. szorgalmi</li>
 									</ul>
 									<h3>Tananyag:</h3>
 									<ol>
