--- a/teaching/elmecha/ora3.html
+++ b/teaching/elmecha/ora3.html
@@ -441,7 +441,7 @@
 									A nagyot kezdjük el megforgatni valamilyen $\dot{\beta}$ sebességgel, a kicsit pedig hagyjuk csúszni: mi lesz ekkor a Lagrange, mik a szimmetriái és a megmaradó mennyiségei?
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson3/noether1.png" alt="Vázlatos rajz a hengerben csúszkáló hengerről" width="45%">
+									<img src="figs/lesson3/noether1.png" alt="Vázlatos rajz a hengerben csúszkáló hengerről" width="35%">
 								</div>
 								<p style="text-align: justify;">
 									Nézzük meg először a feladat nehezét: a paraméterezést.
@@ -449,7 +449,7 @@
 									Ehhez két dolgot kell tudnunk: a csúszásmentes mozgás feltételét, és egy kis geometriát. Utóbbihoz segít a lenti ábra.
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson3/hengerhenger.png" alt="Részletesebb rajz a hengerben csúszkáló hengerről" width="45%">
+									<img src="figs/lesson3/hengerhenger.png" alt="Részletesebb rajz a hengerben csúszkáló hengerről" width="55%">
 								</div>
 								<p style="text-align: justify;">
 									Ha csúszás nélkül történne a mozgás, akkor az érintkzési pontokban megegyeznének a kerületi sebességek, tehát
@@ -663,7 +663,7 @@
 									Cseréljük le az előző feladat ingájának madzagát egy rugóra: \textit{mi lesz ekkor a mozgásegyenlet kis kitérésekre?}
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson3/ruginga.png" alt="Rajz a rugós ingáról" width="45%">
+									<img src="figs/lesson3/ruginga.png" alt="Rajz a rugós ingáról" width="35%">
 								</div>
 								<h4>
 									3.6.1. Általános megoldás
@@ -828,7 +828,7 @@
 									Rakjunk erre a téglatestre egy $l$ hosszúságú ingát, egy $m$ tömegű testtel a végén. <i>Mi lesz az inga mozgásegyenlete?</i>
 								</p>
 								<div style="text-align: center;">
-									<img src="figs/lesson3/csuszoinga.png" alt="Rajz a rugós ingáról" width="45%">
+									<img src="figs/lesson3/csuszoinga.png" alt="Rajz az éken csúszó ingáról" width="35%">
 								</div>
 								<p style="text-align: justify;">
 									Keressük meg a jó változókat!
