--- a/teaching/elmecha/ora3.html
+++ b/teaching/elmecha/ora3.html
@@ -167,7 +167,7 @@
 										 &=  \frac{mM}{M+m} \dot{r}^2  +(M+m)\dot{R}^2
 										\end{aligned}
 									$$
-									Bevezetve a $\mu$ \textit{redukált tömeget}
+									Bevezetve a $\mu$ <i>redukált tömeget</i>
 									$$
 										\mu = \frac{mM}{M+m}
 									$$
@@ -214,7 +214,7 @@
 									$$
 										\vec{F} = -k \vec{r}
 									$$
-									alakban. \textit{Mi lesz a pálya, ha elindítjuk a tömegpontot?}
+									alakban. <i>Mi lesz a pálya, ha elindítjuk a tömegpontot?</i>
 								</p>
 								<div style="text-align: center;">
 									<img src="figs/lesson3/henger.png" alt="Vázlatos rajz a hengeren mozgó tömegpontról" width="45%">
@@ -642,7 +642,7 @@
 									$$
 									    \mathcal{L} = \frac{1}{2} m l^2 \dot{\varphi}^2 \cdot 1 + mgl \cdot \cos{\varphi}
 									$$
-									És közelítsünk a potenciális energiában \textbf{másodrendig}:
+									És közelítsünk a potenciális energiában <b>másodrendig</b>:
 									$$
 									    \mathcal{L} \approx \frac{1}{2} m l^2 \dot{\varphi}^2 \cdot 1 + mgl \cdot \left( 1 -\frac{\varphi^2}{2} \right)
 									$$
@@ -660,7 +660,7 @@
 									3.6. példa: Rugós inga
 								</h3>
 								<p style="text-align: justify;">
-									Cseréljük le az előző feladat ingájának madzagát egy rugóra: \textit{mi lesz ekkor a mozgásegyenlet kis kitérésekre?}
+									Cseréljük le az előző feladat ingájának madzagát egy rugóra: <i>mi lesz ekkor a mozgásegyenlet kis kitérésekre?</i>
 								</p>
 								<div style="text-align: center;">
 									<img src="figs/lesson3/ruginga.png" alt="Rajz a rugós ingáról" width="35%">
