--- a/teaching/elmecha/ora3.html
+++ b/teaching/elmecha/ora3.html
@@ -300,7 +300,7 @@
 									az $x$ tengelyen eltolható rendszereknél mindig megmarad az $x$ irányú lendület, a forgásszimmetrikus feladatokban pedig a perdület.
 									Ezt a megfigyelést formalizálja, és általánosítja a Noether-tétel:
 								</p>
-								<p style="text-align: center"><i>Mi a legrövidebb út két pont között?</i></p>
+								<p style="text-align: center"><i>A Lagrange-függvény minden szimmetriájához tartozik egy megmaradó mennyiség.</i></p>
 								<p style="text-align: justify;">
 									Matematikailag ez azt jelenti, hogy a $q$ változóinkat eltranszformáljuk valahogy (pl. elforgatjuk)
 									$$
