--- a/teaching/elmecha.html
+++ b/teaching/elmecha.html
@@ -133,7 +133,7 @@
 										-->
 										<li><a href="elmecha/ora1.html">Óra (09.15.)</a></li>
 										<li><a href="elmecha/ora2.html">Óra (09.22.)</a></li>
-										<li>Óra (09.29.)</li>
+										<li><a href="elmecha/ora3.html">Óra (09.29.)</a></li>
 										<li>Óra (10.06.)</li>
 										<li>Óra (10.13.)</li>
 									</ol>
